Add a few more routes to the swagger API definition
