# products_orders_application/products-api/swagger.yaml
@@ -34,7 +34,7 @@ paths:
               method.response.header.Access-Control-Allow-Origin: "'*'"
     get:
       tags:
-        - "snotel"
+        - "products"
       summary: "return snotel data by location ID"
       description: "Returns snotel data for a single location over range of dates specified by query params"
       operationId: "getSnotelByLocation"
@@ -63,70 +63,143 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
         requestTemplates:
-          application/json: "{\r\n  \"method\": \"$context.httpMethod\",\r\n  \"body\" : \"$input.body\",\r\n  \"headers\": {\r\n    #foreach($param in $input.params().header.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().header.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"queryParams\": {\r\n    #foreach($param in $input.params().querystring.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().querystring.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"pathParams\": {\r\n    #foreach($param in $input.params().path.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().path.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  }  \r\n}"
+          application/json: "{\r\n  \"method\": \"$context.httpMethod\",\r\n  \"body\" : \"$input.body\",\r\n  \"headers\": {\r\n    #foreach($param in $input.params().header.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().header.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"queryParameters\": {\r\n    #foreach($param in $input.params().querystring.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().querystring.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"pathParameters\": {\r\n    #foreach($param in $input.params().path.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().path.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  }  \r\n}"
+
+  /products/vendor/{vendor}:
+    options:
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Access-Control-Allow-Headers:
+              type: string
+            Access-Control-Allow-Methods:
+              type: string
+            Access-Control-Allow-Origin:
+              type: string
+          schema:
+            $ref: "#/definitions/Empty"
+      x-amazon-apigateway-integration:
+        type: "mock"
+        httpMethod: "POST"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+    get:
+      tags:
+        - "products"
+      summary: "return all products from vendor"
+      operationId: "getProductsByVendor"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "vendor"
+          in: "path"
+          description: "ID of vendor "
+          required: true
+          type: "integer"
+          format: "int64"
+
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+      # For AWS Integration
+      x-amazon-apigateway-request-validators:
+        basic:
+          validateRequestParameters: true
+      x-amazon-apigateway-integration:
+        type: "aws"
+        httpMethod: "POST"
+        # Replace AWS_REGION and ACCOUNT_ID in uri
+        uri: "arn:aws:apigateway:us-west-2:lambda:path/2015-03-31/functions/arn:aws:lambda:us-west-2:710339184759:function:VendorQueryFunction/invocations"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\r\n  \"method\": \"$context.httpMethod\",\r\n  \"body\" : \"$input.body\",\r\n  \"headers\": {\r\n    #foreach($param in $input.params().header.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().header.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"queryParameters\": {\r\n    #foreach($param in $input.params().querystring.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().querystring.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"pathParameters\": {\r\n    #foreach($param in $input.params().path.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().path.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  }  \r\n}"
 
 
-#  /categories/:
-#    options:
-#      responses:
-#        200:
-#          description: "Success"
-#          headers:
-#            Access-Control-Allow-Headers:
-#              type: string
-#            Access-Control-Allow-Methods:
-#              type: string
-#            Access-Control-Allow-Origin:
-#              type: string
-#          schema:
-#            $ref: "#/definitions/Empty"
-#      x-amazon-apigateway-integration:
-#        type: "mock"
-#        httpMethod: "POST"
-#        responses:
-#          default:
-#            statusCode: 200
-#            responseParameters:
-#              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
-#              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
-#              method.response.header.Access-Control-Allow-Origin: "'*'"
-#
-#    get:
-#      tags:
-#        - "get categories"
-#      description: "Returns all categories "
-#      operationId: "getCategories"
-#      produces:
-#        - "application/json"
-#      responses:
-#        200:
-#          description: "Success"
-#          schema:
-#            $ref: "#/definitions/Audio"
-#        400:
-#          description: "Bad Request"
-#        401:
-#          description: "Unauthorized"
-#        404:
-#          description: "Not Found"
-#        500:
-#          description: "Internal Server Error"
-#      # For AWS Integration
-#      x-amazon-apigateway-request-validators:
-#        basic:
-#          validateRequestParameters: true
-#      x-amazon-apigateway-integration:
-#        type: "aws"
-#        httpMethod: "POST"
-#        # Replace AWS_REGION and ACCOUNT_ID in uri
-#        uri: "arn:aws:apigateway:us-west-2:lambda:path/2015-03-31/functions/arn:aws:lambda:us-west-2:710339184759:function:GetCategoriesFunction/invocations"
-#        responses:
-#          default:
-#            statusCode: 200
-#            responseParameters:
-#              method.response.header.Access-Control-Allow-Origin: "'*'"
-#        requestTemplates:
-#          application/json: "{}"
+  /products/category/{category}:
+    options:
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Access-Control-Allow-Headers:
+              type: string
+            Access-Control-Allow-Methods:
+              type: string
+            Access-Control-Allow-Origin:
+              type: string
+          schema:
+            $ref: "#/definitions/Empty"
+      x-amazon-apigateway-integration:
+        type: "mock"
+        httpMethod: "POST"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+    get:
+      tags:
+        - "products"
+      summary: "return all products from vendor"
+      operationId: "getProductsByVendor"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "category"
+          in: "path"
+          description: "ID of vendor "
+          required: true
+          type: "integer"
+          format: "int64"
+
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+      # For AWS Integration
+      x-amazon-apigateway-request-validators:
+        basic:
+          validateRequestParameters: true
+      x-amazon-apigateway-integration:
+        type: "aws"
+        httpMethod: "POST"
+        # Replace AWS_REGION and ACCOUNT_ID in uri
+        uri: "arn:aws:apigateway:us-west-2:lambda:path/2015-03-31/functions/arn:aws:lambda:us-west-2:710339184759:function:CategoryQueryFunction/invocations"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\r\n  \"method\": \"$context.httpMethod\",\r\n  \"body\" : \"$input.body\",\r\n  \"headers\": {\r\n    #foreach($param in $input.params().header.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().header.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"queryParameters\": {\r\n    #foreach($param in $input.params().querystring.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().querystring.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  },\r\n  \"pathParameters\": {\r\n    #foreach($param in $input.params().path.keySet())\r\n    \"$param\": \"$util.escapeJavaScript($input.params().path.get($param))\" #if($foreach.hasNext),#end\r\n\r\n    #end\r\n  }  \r\n}"
+
+
+
+
+
+
+
 
 definitions:
   Empty:
